--- a/client/src/app/styles/index.css
+++ b/client/src/app/styles/index.css
@@ -2,6 +2,11 @@
 @import './variables/global.css';
 @import '../fonts/index.css';
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   font-family: var(--font-family);
   background-color: var(--black);
@@ -10,11 +15,27 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 #root {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
