--- a/client/src/pages/layouts/WithHeaderLayout/index.module.css
+++ b/client/src/pages/layouts/WithHeaderLayout/index.module.css
@@ -1,5 +1,13 @@
 .WithHeaderLayout {
   width: 100%;
-  max-width: 1920px;
-  padding: 0 100px;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  max-width: 1720px;
 }
