--- a/client/src/app/fonts/index.css
+++ b/client/src/app/fonts/index.css
@@ -9,6 +9,15 @@
 
 @font-face {
   font-family: 'OpenSans';
+  src: url('./OpenSans-SemiBold.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  font-variant: normal;
+}
+
+@font-face {
+  font-family: 'OpenSans';
   src: url('./OpenSans-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
