--- a/client/src/pages/layouts/WithHeaderLayout/index.module.css
+++ b/client/src/pages/layouts/WithHeaderLayout/index.module.css
@@ -4,10 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .content {
   width: 100%;
-  height: 100%;
   max-width: 1720px;
 }
