Add mobile header, burger menu

--- a/client/src/features/Footer/index.module.css
+++ b/client/src/features/Footer/index.module.css
@@ -1,9 +1,9 @@
 .Footer {
+  margin-top: auto;
   width: 100%;
   border-top: 2px solid var(--red);
   padding: 0 100px;
   display: flex;
-  justify-content: center;
   justify-content: center;
   background-color: var(--white-50);
 }
