--- a/client/src/shared/ui/Logo/index.module.css
+++ b/client/src/shared/ui/Logo/index.module.css
@@ -20,3 +20,10 @@
 .Logo__icon {
   margin-right: 15px;
 }
+
+@media (max-width: 1024px) {
+  .Logo__icon {
+    width: 30px;
+    height: 30px;
+  }
+}
