--- a/client/src/pages/layouts/WithHeaderLayout/index.module.css
+++ b/client/src/pages/layouts/WithHeaderLayout/index.module.css
@@ -5,9 +5,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  padding: 0;
 }
 
 .content {
   width: 100%;
-  max-width: 1720px;
+  position: relative;
 }
