--- a/client/src/shared/ui/Button/index.module.css
+++ b/client/src/shared/ui/Button/index.module.css
@@ -8,4 +8,6 @@
     font-size: 20px;
     line-height: 1;
     font-weight: bold;
+    box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.33);
+    text-decoration: none;
 }
