--- a/client/src/pages/layouts/WithHeaderLayout/index.module.css
+++ b/client/src/pages/layouts/WithHeaderLayout/index.module.css
@@ -11,4 +11,17 @@
 .content {
   width: 100%;
   position: relative;
+  flex-grow: 1;
+}
+
+.container {
+  width: 100%;
+  max-width: 1920px;
+  padding: 0 100px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    padding: 0;
+  }
 }
