--- a/client/src/features/Carousel/Carousel.module.css
+++ b/client/src/features/Carousel/Carousel.module.css
@@ -1,16 +1,19 @@
 .carousel {
   width: 100%;
-  height: 642px;
+  --carousel-height: 642px;
+  height: var(--carousel-height);
 }
 
 .image {
   position: absolute;
   top: 0;
   right: 0;
-  width: 998px !important;
-  height: 642px !important;
+  width: 55% !important;
+  height: var(--carousel-height) !important;
   border-radius: 25px;
   z-index: 0;
+  object-fit: cover;
+  object-position: center;
 }
 
 .wrapper {
@@ -20,7 +23,7 @@
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
-  height: 642px;
+  height: var(--carousel-height);
 }
 
 .title,
@@ -69,5 +72,92 @@
 
   &:global(.selected) {
     background-color: var(--red);
+  }
+}
+
+@media (max-width: 1700px) {
+  .carousel {
+    --carousel-height: 580px;
+  }
+
+  .title {
+    font-size: 85px;
+  }
+
+  .wrapper {
+    padding: 60px 0;
+  }
+
+  .description {
+    margin-top: 40px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 1500px) {
+  .carousel {
+    --carousel-height: 500px;
+  }
+
+  .title {
+    font-size: 65px;
+  }
+
+  .wrapper {
+    padding: 50px 0;
+  }
+
+  .description {
+    margin-top: 30px;
+    font-size: 18px;
+    width: 42%;
+  }
+}
+
+@media (max-width: 1200px) {
+  :global(.carousel .control-dots) {
+    bottom: auto;
+    top: 0;
+    margin: 20px 0;
+    padding: 0 20px;
+  }
+
+  .carousel {
+    --carousel-height: auto;
+  }
+
+  .wrapper {
+    padding-left: 30px;
+    padding-right: 30px;
+    align-items: center;
+    padding: 0 50px;
+  }
+
+  .image {
+    width: 100% !important;
+    height: 380px !important;
+  }
+
+  .title {
+    width: 100%;
+    margin-top: 360px;
+    font-size: 55px;
+  }
+
+  .description {
+    width: 100%;
+    padding: 20px 0;
+  }
+}
+
+@media (max-width: 620px) {
+  .image {
+    width: 100% !important;
+    height: 300px !important;
+  }
+
+  .title {
+    font-size: 40px;
+    margin-top: 285px;
   }
 }
