--- a/client/src/app/styles/variables/global.css
+++ b/client/src/app/styles/variables/global.css
@@ -14,6 +14,7 @@
   --white-50: rgba(255, 255, 255, 0.05);
   --white-100: rgba(255, 255, 255, 0.1);
   --white-500: rgba(255, 255, 255, 0.5);
+  --white-700: rgba(255, 255, 255, 0.7);
   --white-800: rgba(255, 255, 255, 0.8);
 
   --modal-z-index: 10;
